chore: Update multiple artwork RFCs

--- a/rfc9043.html
+++ b/rfc9043.html
@@ -2177,7 +2177,7 @@ Q_j[k] = quant_tables[i][j][k&amp;255]
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-4-0">Show svg only.</a><a href="#figure-4-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-4-0">Show SVG only</a><a href="#figure-4-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-4" class="selfRef">Figure 4</a>:
@@ -2426,7 +2426,7 @@ context = Q_0[l - tl] +
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-5-0">Show svg only.</a><a href="#figure-5-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-5-0">Show SVG only</a><a href="#figure-5-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-5" class="selfRef">Figure 5</a>:
@@ -2635,7 +2635,7 @@ Y = g + (Cb + Cr) &gt;&gt; 2
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-6-0">Show svg only.</a><a href="#figure-6-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-6-0">Show SVG only</a><a href="#figure-6-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-6" class="selfRef">Figure 6</a>:
@@ -2787,7 +2787,7 @@ b = Cb + g
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-7-0">Show svg only.</a><a href="#figure-7-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-7-0">Show SVG only</a><a href="#figure-7-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-7" class="selfRef">Figure 7</a>:
@@ -2961,7 +2961,7 @@ Y = b + (Cb + Cr) &gt;&gt; 2
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-8-0">Show svg only.</a><a href="#figure-8-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-8-0">Show SVG only</a><a href="#figure-8-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-8" class="selfRef">Figure 8</a>:
@@ -3113,7 +3113,7 @@ g = Cb + b
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-9-0">Show svg only.</a><a href="#figure-9-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-9-0">Show SVG only</a><a href="#figure-9-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-9" class="selfRef">Figure 9</a>:
@@ -3375,7 +3375,7 @@ coder_input = ((sample_difference + 2 ^ (bits - 1)) &amp;
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-10-0">Show svg only.</a><a href="#figure-10-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-10-0">Show SVG only</a><a href="#figure-10-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-10" class="selfRef">Figure 10</a>:
@@ -3519,7 +3519,7 @@ R_0 = 65280
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-11-0">Show svg only.</a><a href="#figure-11-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-11-0">Show SVG only</a><a href="#figure-11-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-11" class="selfRef">Figure 11</a>:
@@ -3611,7 +3611,7 @@ L_0 = 2 ^ 8 * B_0 + B_1
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-12-0">Show svg only.</a><a href="#figure-12-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-12-0">Show SVG only</a><a href="#figure-12-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-12" class="selfRef">Figure 12</a>:
@@ -3673,7 +3673,7 @@ j_0 = 2
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-13-0">Show svg only.</a><a href="#figure-13-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-13-0">Show SVG only</a><a href="#figure-13-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-13" class="selfRef">Figure 13</a>:
@@ -3796,7 +3796,7 @@ r_i = floor( ( R_i * S_(i, C_i) ) / 2 ^ 8 )
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-14-0">Show svg only.</a><a href="#figure-14-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-14-0">Show SVG only</a><a href="#figure-14-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-14" class="selfRef">Figure 14</a>:
@@ -4243,7 +4243,7 @@ r_i = floor( ( R_i * S_(i, C_i) ) / 2 ^ 8 )
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-15-0">Show svg only.</a><a href="#figure-15-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-15-0">Show SVG only</a><a href="#figure-15-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-15" class="selfRef">Figure 15</a>:
@@ -4364,7 +4364,7 @@ C_i != k ==&gt; S_(i + 1, k) = S_(i, k)
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-16-0">Show svg only.</a><a href="#figure-16-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-16-0">Show SVG only</a><a href="#figure-16-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-16" class="selfRef">Figure 16</a>:
@@ -4675,7 +4675,7 @@ j_(i + 1) =  j_i
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-17-0">Show svg only.</a><a href="#figure-17-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-17-0">Show SVG only</a><a href="#figure-17-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-17" class="selfRef">Figure 17</a>:
@@ -5012,7 +5012,7 @@ one_state_i =
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-22-0">Show svg only.</a><a href="#figure-22-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-22-0">Show SVG only</a><a href="#figure-22-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-22" class="selfRef">Figure 22</a>:
@@ -5176,7 +5176,7 @@ zero_state_i = 256 - one_state_(256-i)
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-23-0">Show svg only.</a><a href="#figure-23-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-23-0">Show SVG only</a><a href="#figure-23-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-23" class="selfRef">Figure 23</a>:
@@ -6331,7 +6331,7 @@ pred = j ? initial_states[ i ][j - 1][ k ] : 128
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-29-0">Show svg only.</a><a href="#figure-29-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-29-0">Show SVG only</a><a href="#figure-29-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-29" class="selfRef">Figure 29</a>:
@@ -6532,7 +6532,7 @@ initial_state[ i ][ j ][ k ] =
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-30-0">Show svg only.</a><a href="#figure-30-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-30-0">Show SVG only</a><a href="#figure-30-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-30" class="selfRef">Figure 30</a>:
