--- a/rfc9290.html
+++ b/rfc9290.html
@@ -1501,7 +1501,7 @@ Thus, API clients can be informed of both the high-level error class
 </div>
 </div>
 </div>
-<div class="artwork_links"><a href="#figure-1-0">Show svg only.</a><a href="#figure-1-1">Show ascii-art</a>
+<div class="artwork_links"><a href="#figure-1-0">Show SVG only</a><a href="#figure-1-1">Show ASCII-ART</a>
 </div>
 </div>
 <figcaption><a href="#figure-1" class="selfRef">Figure 1</a>:
